--- a/cart.html
+++ b/cart.html
@@ -1,11 +1,106 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Add to Cart</title>
+    <link rel="stylesheet" href="cart.css" />
+  </head>
+  <body>
+    <div class="container">
+      <h1>Shopping Cart</h1>
+
+      <div class="product-list">
+        <div class="product">
+          <img src="4.webp" alt="Product 1" />
+          <h2>Product 1</h2>
+          <p>$10.00</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+        <div class="product">
+          <img src="5.webp" alt="Product 2" />
+          <h2>Product 2</h2>
+          <p>$20.00</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+
+        <div class="product">
+          <img src="5.webp" alt="Product 2" />
+          <h2>Product 3</h2>
+          <p>$21.00</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+
+        <div class="product">
+          <img src="5.webp" alt="Product 2" />
+          <h2>Product 4</h2>
+          <p>$22.00</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+
+        <div class="product">
+          <img src="6.webp" alt="Product 2" />
+          <h2>Product 5</h2>
+          <p>$23.00</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+
+        <div class="product">
+          <img src="7.webp" alt="Product 2" />
+          <h2>Product 6</h2>
+          <p>$24.00</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+
+        <div class="product">
+          <img src="8.webp" alt="Product 2" />
+          <h2>Product 7</h2>
+          <p>$25.00</p>
+          <button class="add-to-cart">Add to Cart</button>
+        </div>
+
+        <div class="product">
+          <img src="9.webp" alt="Product 2" />
+          <h2>Product 8</h2>
+          <p>$25.00</p>
+          <button class="add-to-cart ">Add to Cart</button>
+        </div>
+        <!-- Add more products as needed -->
+      </div>
+      <div class="cart">
+        <h2>Cart</h2>
+        <ul class="cart-items"></ul>
+        <p class="total">Total: $0.00</p>
+      </div>
+
+      <button class="proceed-to-payment">Proceed To Payment</button>    </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const addToCartButtons = document.querySelectorAll(".add-to-cart");
+        const cartItems = document.querySelector(".cart-items");
+        const total = document.querySelector(".total");
+        let totalAmount = 0;
+
+        addToCartButtons.forEach((button) => {
+          button.addEventListener("click", () => {
+            const product = button.closest(".product");
+            const productName = product.querySelector("h2").textContent;
+            const productPrice = parseFloat(
+              product.querySelector("p").textContent.replace("$", "")
+            );
+
+            const cartItem = document.createElement("li");
+            cartItem.textContent = `${productName} - $${productPrice.toFixed(
+              2
+            )}`;
+            cartItems.appendChild(cartItem);
+
+            totalAmount += productPrice;
+            total.textContent = `$ Total : ${totalAmount.toFixed(2)}`;
+          });
+        });
+      });
+    </script>
+  </body>
 </html>
